com outros erros

--- a/test2/index.html
+++ b/test2/index.html
@@ -8,15 +8,33 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <div id="item-0">
+        </div>
+    </header>
+
     <div class="angry-grid">
-        <div id="item-0">&nbsp;</div>
-        <div id="item-1">&nbsp;</div>
-        <div id="item-2">&nbsp;</div>
-        <div id="item-3">&nbsp;</div>
+        <div id="item-0">
+            <!-- Sempre que for possivel insira as imagem utilizando a tag img -->
+            <img src="img/nfr.png" alt="">
+            <span class="titulo">NRF 2020: conheça os top 5 assuntos do evento.</span>
+        </div>
+        <div id="item-1">
+            <!-- Sempre que for possivel insira as imagem utilizando a tag img -->
+            <img src="img/nba.png" alt="">
+            <span class="titulo">Petição para colocar Kobe Bryant no logo da NBA.</span>
+        </div>
+        <div id="item-2">
+            <!-- Sempre que for possivel insira as imagem utilizando a tag img -->
+            <img src="img/wpp.png" alt="">
+            <span class="titulo">WhatsApp terá função de pagamentos em 2020.</span>
+        </div>
+        <!-- <div id="item-3">&nbsp;</div>
         <div id="item-4">&nbsp;</div>
-        <div id="item-5">&nbsp;</div>
-        <div id="item-6">&nbsp;</div>
-        <div id="item-7">&nbsp;</div>
+        <div id="item-5">&nbsp;</div> -->
+        <!-- <div id="item-6">&nbsp;</div>
+        <div id="item-7">&nbsp;</div> -->
       </div>
 </body>
 </html>
